<resources>
    <string name="app_name">Fun2sh</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. </string>
    <string name="sendclose"><![CDATA[Send & Close]]></string>
    <string name="permission_rationale_title">We need this permission</string>
    <string name="permission_rationale_message">This permission is needed for doing some fancy stuff so please, allow it!</string>
    <string name="permission_rationale_settings_button_text">SETTINGS</string>
    <string-array name="test">
        <item>test1</item>
        <item>test2</item>
        <item>test3</item>
        <item>test4</item>
    </string-array>
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>My Profile</item>
        <item>FunGames</item>
        <item>FunTube</item>
        <item>FunChat</item>
        <item>Help Desk</item>
        <item>Terms of Use</item>
        <item>About Us</item>
        <item>Polices</item>
        <item>Sign Out</item>
    </string-array>
    <string-array name="new_messages_friend">
        <item>Send Message</item>
        <item>Audio Call</item>
        <item>Video Call</item>
        <item>Block Contact</item>
        <item>Delete Chat History</item>
        <item>Remove Contact and Chat</item>
    </string-array>
    <string-array name="new_messages_friend_unblock">
        <item>Send Message</item>
        <item>Audio Call</item>
        <item>Video Call</item>
        <item>Unblock Contact</item>
        <item>Delete Chat History</item>
        <item>Remove Contact and Chat</item>
    </string-array>
    <string-array name="month_of_birth">
        <item>Month of birth</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="day_of_birth">
        <item>Day of birth</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string name="action_bar_chats">Chats</string>
    <string name="action_bar_settings">Settings</string>
    <string name="action_bar_invite_friends">Invite Friends</string>
    <string name="action_bar_feedback">Feedback</string>
    <string name="action_bar_about">About</string>
    <string name="action_bar_search">Search</string>
    <string name="action_bar_add_chat">Add Chat</string>
    <string name="action_bar_delete_friend">Delete Friend</string>
    <string name="action_bar_add_friend_to_chat">Add friend to Chat</string>
    <string name="action_bar_leave_chat">Leave Chat</string>
    <string name="action_bar_chat_details">Chat details</string>
    <string name="action_bar_add_chat_attach">Add attach</string>
    <string name="landing_connect_with_facebook">Connect with Facebook</string>
    <string name="landing_already_have_account">Already have an account?</string>
    <string name="landing_sign_up">Sign Up with Email</string>
    <string name="landing_version">v. %1$s</string>
    <string name="auth_sign_up_title">Sign Up</string>
    <string name="auth_login_title">Log In</string>
    <string name="auth_forgot_password">Forgot password?</string>
    <string name="auth_hint_password">Password</string>
    <string name="auth_log_in_with_facebook">Log in with Facebook</string>
    <string name="auth_hint_email">Email</string>
    <string name="auth_remember_me">Remember Me</string>
    <string name="auth_username_error">This username has not authenticated yet, please check your credentials</string>
    <string name="auth_not_all_fields_entered">Please fill all empty input fields</string>
    <string name="auth_email_field_is_incorrect">Please enter a valid email</string>
    <string name="auth_email_field_not_entered">Please enter email</string>
    <string name="auth_password_field_not_entered">Please enter password</string>
    <string name="auth_password_field_is_too_short">Password is too short (minimum is 8 characters)</string>
    <string name="auth_full_name_field_not_entered">Please enter Full Name</string>
    <string name="auth_full_name_field_is_too_short">Full Name is too short (minimum is 3 characters)</string>
    <string name="auth_full_name_field_is_too_long">Full Name is too long (maximum is 50 characters)</string>
    <string name="auth_full_name_has_impossible_characters">Full Name has impossible characters (not allowed: \'&gt;\', \'&lt;\', \';\')</string>
    <string name="auth_hint_full_name">Full Name</string>
    <string name="auth_choose_user_picture">Choose user picture</string>
    <string name="user_agreement_title">User Agreement</string>
    <string name="user_agreement_label">By clicking Tick, you agree to FunChat\n<b><u>User Agreement</u></b></string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_email">Email</string>
    <string name="forgot_password_email_field_not_entered">Please enter email</string>
    <string name="forgot_password_email_field_is_incorrect">Please enter a valid email</string>
    <string name="forgot_password_label">Enter your email and we\'ll send a link to reset your password</string>
    <string name="forgot_password_massage_email_was_sent">Mail was sent to %1$s</string>
    <string name="user_profile_title">Info</string>
    <string name="user_profile_mobile">Mobile</string>
    <string name="user_profile_status">Mood</string>
    <string name="user_profile_send_message">Send Message</string>
    <string name="user_profile_audio_call">Audio Call</string>
    <string name="user_profile_video_call">Video Call</string>
    <string name="user_delete_chat_history">Delete Chat History</string>
    <string name="user_remove_contact_and_chat_history">Remove Contact and Chat</string>
    <string name="user_block_contact">Block Contact</string>
    <string name="user_unblock_contact">Unblock Contact</string>
    <string name="user_profile_remove_contact_and_chat_history">Do you really want to delete %1$s from your contact list with his chat?</string>
    <string name="user_profile_delete_chat_history">Do you really want to delete chat history with %1$s?</string>
    <string name="user_profile_success_contacts_deleting">You have deleted %1$s from your contacts</string>
    <string name="user_profile_success_chat_history_deleting">You have deleted chat history with %1$s</string>
    <string name="user_profile_chat_does_not_exists">Chat does not exists</string>
    <string name="new_message_title">New Message</string>
    <string name="new_message_create_group">Create group</string>
    <string name="new_message_no_friends_for_new_message">You don\'t have any Friends for creating New Chat</string>
    <string name="new_message_select_option">Select</string>
    <string-array name="new_messages_option">
        <item>Add this message to Favourite</item>
        <item>Edit this message</item>
        <item>Remove this message</item>
        <item>Copy this message</item>
    </string-array>
    <string-array name="new_messages_own_attachment_option">
        <item>Add this message to Favourite</item>
        <item>Remove this message</item>
        <item>Forward this message</item>
    </string-array>
    <string-array name="new_messages_option_opponent">
        <item>Add this message to Favourite</item>
        <item>Copy this message</item>
    </string-array>
    <string-array name="new_messages_fav">
        <item>Remove this message from favourite</item>
        <item>Copy this message</item>
    </string-array>
    <string name="new_group_title">New Group</string>
    <string name="new_group_no_friends_for_creating_group">No friends for creating group</string>
    <string name="new_group_add_people">Add People</string>
    <string name="create_group_title">Create Group</string>
    <string name="create_group_group_name">Group Name</string>
    <string name="create_group_empty_group_name">Group name can not be empty</string>
    <string name="create_group_participants">%1d participants</string>
    <string name="create_group_confirm_selecting_photo">Do you really want to load this photo?</string>
    <string name="add_friends_to_group_title">Add Friends</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_change_password">Change Password</string>
    <string name="settings_push_notifications">Push Notifications</string>
    <string name="settings_invite_friends">Invite Friends</string>
    <string name="settings_give_feedback">Give Feedback</string>
    <string name="settings_delete_my_account">Delete My Account</string>
    <string name="dummy_status">Hey,I am enjoying FunChat with Fun2Sh</string>
    <string name="btn_audio_call">AUDIO CALL</string>
    <string name="btn_video_call">VIDEO CALL</string>
    <string name="select_user_to_call">Select Users You Want to Call</string>
</resources>