<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentOpponents"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/selectUsertextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/select_user_to_call"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gray"
        android:textStyle="bold" />

    <!--android:layout_alignParentTop="true"-->


    <ListView
        android:id="@+id/opponentsList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_below="@+id/selectUsertextView"
        android:layout_gravity="center_horizontal"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAudioCall"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/btn_audio_call"
            android:textColor="@color/blue"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnVideoCall"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/btn_video_call"
            android:textColor="@color/green"
            android:textStyle="bold" />

        <!--<Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_screen_capture"
            android:id="@+id/screenCapturer"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@android:color/transparent"
            android:textColor="@color/blue_green"
            android:layout_weight="1"
            android:textStyle="bold" />-->
        <!--
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="close channles"
            android:id="@+id/closeChnnal"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@android:color/transparent"
            android:textColor="@color/blue_green"
            android:layout_weight="1"
            android:textStyle="bold" />-->
    </LinearLayout>

</RelativeLayout>